--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="scripts/main.js"></script>
         <script type="text/javascript" src="scripts/tree.js"></script>
         <script type="text/javascript" src="scripts/ground.js"></script>
+        <script type="text/javascript" src="scripts/wind-n-rain.js"></script>
     </head>
     <body>
         <script>
