--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="scripts/tree.js"></script>
         <script type="text/javascript" src="scripts/ground.js"></script>
         <script type="text/javascript" src="scripts/wind-n-rain.js"></script>
+        <script type="text/javascript" src="scripts/bugs.js"></script>
     </head>
     <body>
         <script>
