music, sfx, fixes, title

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Gawn Wit Teh Wynd</title>
         <link rel="stylesheet" href="css/main.css">
+
+        <script type="text/javascript" src="scripts/third-party/sound.js"></script>
+
         <script type="text/javascript" src="scripts/main.js"></script>
         <script type="text/javascript" src="scripts/tree.js"></script>
         <script type="text/javascript" src="scripts/ground.js"></script>
